Fix home promoted content alignment

--- a/app/assets/stylesheets/components/_home_promoted.scss
+++ b/app/assets/stylesheets/components/_home_promoted.scss
@@ -1,15 +1,15 @@
 .home-promoted {
-  @include column(12);
   @extend .list--unstyled;
+  @extend %clearfix;
   margin-bottom: $baseline-unit*4;
-
-  @include respond-to($mq-l) {
-    @include push(3);
-  }
 }
 
 .home-promoted__item {
   @include column(12);
+
+  &:first-child {
+    @include push(3);
+  }
 
   a {
     @extend %type-promoted-content;
